force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/vlocity_ps__IncidentAllegation__c.object-meta.xml
<CustomObject>
    <description>To store allegations for an incident.</description>
    <label>Incident Allegation</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident Allegations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>