force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/Allegation_Type__c.field-meta.xml
<CustomField>
    <fullName>Allegation_Type__c</fullName>
    <label>Allegation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sexual Abuse</fullName>
            </value>
            <value>
                <fullName>Physical Abuse</fullName>
            </value>
            <value>
                <fullName>Emotional Abuse</fullName>
            </value>
            <value>
                <fullName>Neglect and Deprivation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>