force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/Alleged_Child__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Allegations (Alleged Child)</relationshipLabel>
    <relationshipName>Incident_Allegations2</relationshipName>
    <type>Lookup</type>
</CustomField>