force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/Alleged_Maltreater__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Maltreater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Maltreater</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Allegations (Alleged Maltreater)</relationshipLabel>
    <relationshipName>Incident_Allegations1</relationshipName>
    <type>Lookup</type>
</CustomField>