force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Incident Allegations</relationshipLabel>
    <relationshipName>Incident_Allegations</relationshipName>
    <type>Lookup</type>
</CustomField>