force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/vlocity_ps__AllegedMaltreator__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AllegedMaltreator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Maltreator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Allegations (Alleged Maltreator)</relationshipLabel>
    <relationshipName>IncidentAllegationAllegedMaltreators</relationshipName>
    <type>Lookup</type>
</CustomField>