force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/vlocity_ps__AllegedVictim__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AllegedVictim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Alleged victim of allegation.</description>
    <label>Alleged Victim</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Allegations</relationshipLabel>
    <relationshipName>IncidentAllegationAllegedVictims</relationshipName>
    <type>Lookup</type>
</CustomField>