force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/vlocity_ps__Decision__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>Proven</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>