force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/vlocity_ps__DecisionDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DecisionDateTime__c</fullName>
    <label>Decision Date Time</label>
    <type>DateTime</type>
</CustomField>