force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/vlocity_ps__IncidentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IncidentId__c</fullName>
    <label>Incident</label>
    <referenceTo>vlocity_ps__Incident__c</referenceTo>
    <relationshipName>Incident_Allegations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>