force-app/main/default/objects/vlocity_ps__IncidentAllegation__c/fields/vlocity_ps__Source__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>